WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149906
DataView instances should not have own "byteLength" and "byteOffset" properties
https://bugs.webkit.org/show_bug.cgi?id=149906
Summary
DataView instances should not have own "byteLength" and "byteOffset" properties
Keith Miller
Reported
2015-10-07 17:00:35 PDT
According to the ECMA 6 spec DataView should use getters on the DataView.prototype for byteLength and byteOffset.
Attachments
Patch
(7.00 KB, patch)
2020-09-24 14:58 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Patch
(8.60 KB, patch)
2020-09-25 02:12 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-09-24 14:58:43 PDT
Created
attachment 409624
[details]
Patch
Ross Kirsling
Comment 2
2020-09-24 15:02:21 PDT
Comment on
attachment 409624
[details]
Patch Cool!
Alexey Shvayka
Comment 3
2020-09-24 15:06:25 PDT
(In reply to Keith Miller from
comment #0
)
> According to the ECMA 6 spec DataView should use getters on the > DataView.prototype for byteLength and byteOffset.
The getters were added in
r198435
. This patch removes them as own properties.
Alexey Shvayka
Comment 4
2020-09-25 02:12:08 PDT
Created
attachment 409670
[details]
Patch Adjust inspector/model/remote-object/object.html expectations.
Alexey Shvayka
Comment 5
2020-09-25 04:39:11 PDT
Comment on
attachment 409670
[details]
Patch (In reply to Ross Kirsling from
comment #2
)
> Comment on
attachment 409624
[details]
> Patch > > Cool!
Thanks for review, Ross!
EWS
Comment 6
2020-09-25 04:51:38 PDT
Committed
r267564
: <
https://trac.webkit.org/changeset/267564
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409670
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-09-25 04:52:16 PDT
<
rdar://problem/69563463
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug