DataView instances should not have own "byteLength" and "byteOffset" properties https://bugs.webkit.org/show_bug.cgi?id=149906

Reviewed by Ross Kirsling.

JSTests:

* stress/dataview-no-own-properties.js: Added.

Source/JavaScriptCore:

Following JSDataView::getOwnPropertySlot() deletion in r266529, this patch
removes related method overrides that incorrectly reported "byteLength" and
"byteOffset" as own properties of DataView instances [1].

This change brings DataView objects in compliance with invariants of internal
methods [2] and aligns JSC with V8 and SpiderMonkey.
DataView microbenchmarks are neutral.

[1]: https://tc39.es/ecma262/#sec-properties-of-dataview-instances
[2]: https://tc39.es/ecma262/#sec-invariants-of-the-essential-internal-methods

* runtime/JSDataView.cpp:
(JSC::JSDataView::put): Deleted.
(JSC::JSDataView::defineOwnProperty): Deleted.
(JSC::JSDataView::deleteProperty): Deleted.
(JSC::JSDataView::getOwnNonIndexPropertyNames): Deleted.
* runtime/JSDataView.h:

LayoutTests:

* inspector/model/remote-object/object-expected.txt:


Canonical link: https://commits.webkit.org/229743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267564 268f45cc-cd09-0410-ab3c-d52691b4dbfc